instances/lightwell-framework-instance/routes/portal-soap-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: lwfw-soap
  namespace: b2bi-prod
spec:
  host: >-
    asi-b2bi-prod.b2bi-test-cluster-dal10-0defdaa0c51bd4a2dcb024eab4bf04a1-0000.us-south.containers.appdomain.cloud
  path: /portal_soap
  to:
    kind: Service
    name: ibm-sfg-b2bi-prod-b2bi-asi-backend-svc
    weight: 100
  port:
    targetPort: 30201
  wildcardPolicy: None
